fixed lore page spacing of words

--- a/style.css
+++ b/style.css
@@ -186,10 +186,31 @@ margin: 10px 0;
 
     font-size: 25px;
     text-align: center;
-
+    line-height: 1.9em;
+    
     
 }
 
 #lore {
     background-image: url(lore_background.jpg);
+    height: 100vh;
+    background-size:cover;              /* fixed image to cover */
+    background-position: center;    
+    background-repeat: no-repeat;
+    opacity: 0.5;
+    align-items: center;
+    padding: 50px;
+    
+    
 }
+
+#lore div {
+
+    align-items: center;
+    padding-top: 20%;
+    padding: auto;
+
+    text-indent: 75px;
+}
+
+
